// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price /> renders correctly 1`] = `
<span
  className="price"
>
  <span
    className="sign"
    dangerouslySetInnerHTML={
      Object {
        "__html": "RUB ",
      }
    }
  />
  <span>
    100.58
  </span>
</span>
`;

exports[`<Price /> renders correctly 2`] = `
<span
  className="price"
>
  <span>
    100
  </span>
  <span
    className={null}
    dangerouslySetInnerHTML={
      Object {
        "__html": " USD",
      }
    }
  />
</span>
`;

exports[`<Price /> renders correctly 3`] = `
<span
  className="price"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "<span><b>100</b><sup>00</sup></span>",
      }
    }
  />
  <span
    className={null}
    dangerouslySetInnerHTML={
      Object {
        "__html": " USD",
      }
    }
  />
</span>
`;
